--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+GameDevLab4/UserSettings/Layouts/default-2021.dwlt
