--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 GameDevLab4/UserSettings/Layouts/default-2021.dwlt
+
+GameDevLab4/UserSettings/EditorUserSettings.asset
